# claude-code-guide

./: README.md  claude.md  daily-standup.md
simple-project/chatbi/langchain_chatbi/: .gitignore  .simple.env  MYSQL_SETUP.md  README.md  README_CN.md  WEB_GUIDE.md  __init__.py  pyproject.toml  requirements.txt  requirements_all.txt  run_demo.sh  setup.py  start_web.sh
simple-project/chatbi/langchain_chatbi/agents/: __init__.py  answer_agent.py  base.py  chart_agent.py  db_agent.py  diagnosis_agent.py  intent_agent.py  reasoning_agent.py  schema_agent.py  sql_agent.py
simple-project/chatbi/langchain_chatbi/config/: dictionary_config.yaml  synonym_config.yaml
simple-project/chatbi/langchain_chatbi/db/: mysql_db.py
simple-project/chatbi/langchain_chatbi/demos/: demo_full_workflow.py  demo_intent_agent.py  demo_streaming_agents.py  mysql_execution_demo.py
simple-project/chatbi/langchain_chatbi/design_doc/: dic_design_设计提示词.md  graph_rag.md  关系设计GraphRag.md  字典功能设计.md
simple-project/chatbi/langchain_chatbi/dictionary/: __init__.py  dictionary_service.py  models.py
simple-project/chatbi/langchain_chatbi/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
simple-project/chatbi/langchain_chatbi/llm/: __init__.py  langchain_llm.py
simple-project/chatbi/langchain_chatbi/models/: __init__.py  response_models.py
simple-project/chatbi/langchain_chatbi/tests/: conftest.py  test_agents.py  test_db_agent_integration.py  test_dictionary_service.py  test_dictionary_workflow_integration.py  test_intent_agent_integration.py  test_mysql_connection.py  (+3 more)
(+195 files in other folders)
